Feito login com em prod. com hotToast

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="container-login">
-        <form [formGroup]="loginForm" >
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <h2 style="display: flex; justify-content: center;">Login</h2>
             <mat-form-field appearance="fill" class="field">
                 <mat-label>Entre com seu email</mat-label>
@@ -10,9 +10,9 @@
               </mat-form-field>
               <mat-form-field appearance="fill" class="field">
                 <mat-label>Entre com sua senha</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" type="password" required>
-                <mat-error *ngIf="loginForm.get('password')?.errors?.['required']">Campo obrigatório</mat-error>
-                <mat-error *ngIf="loginForm.get('password')?.errors?.['minlength']">O mínimo são 8 caracteres</mat-error>
+                <input matInput [type]="hide ? 'password' : 'text'" formControlName="senha" type="password" required>
+                <mat-error *ngIf="loginForm.get('senha')?.errors?.['required']">Campo obrigatório</mat-error>
+                <mat-error *ngIf="loginForm.get('senha')?.errors?.['minlength']">O mínimo são 8 caracteres</mat-error>
                 <mat-icon matPrefix>key</mat-icon>
                 <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                   <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
