Tabela com todos funcionários.

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -15,6 +15,6 @@
       <p style="align-items: center; display: flex;"><mat-icon class="icon-sidebar">request_quote</mat-icon> Fazer Pedido</p>
       <p style="align-items: center; display: flex;"><mat-icon class="icon-sidebar">attach_money</mat-icon>Valor do Dia</p>
       <p style="align-items: center; display: flex;"><mat-icon class="icon-sidebar">leaderboard</mat-icon>Estatísticas</p>
-      <p style="align-items: center; display: flex;"><mat-icon class="icon-sidebar">group_add</mat-icon>Cadastrar Funcionario</p>
+      <p routerLink="/funcionarios" style="align-items: center; display: flex;"><mat-icon class="icon-sidebar">group_add</mat-icon>Cadastrar Funcionario</p>
     </mat-drawer>
 </mat-drawer-container>
