--- a/src/app/funcionarios/funcionarios.component.html
+++ b/src/app/funcionarios/funcionarios.component.html
@@ -6,9 +6,10 @@
     <h1 class="title">Lista de Funcionários</h1>
   </div>
   <div>
-    <mat-form-field appearance="standard" >
-      <mat-label style="margin-left: 10px;">Pesquisar</mat-label>
-      <input style="margin-left: 10px;"
+    <mat-form-field appearance="standard">
+      <mat-label style="margin-left: 10px">Pesquisar</mat-label>
+      <input
+        style="margin-left: 10px"
         matInput
         (keyup)="applyFilter($event)"
         placeholder="Nome"
@@ -19,7 +20,7 @@
   <table mat-table [dataSource]="dataSources">
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>#ID</th>
-      <td style="background-color: #ccc" mat-cell *matCellDef="let funcioario">
+      <td  mat-cell *matCellDef="let funcioario">
         {{ funcioario.id }}
       </td>
     </ng-container>
@@ -56,9 +57,35 @@
       <td mat-cell *matCellDef="let funcionario">{{ funcionario.perfils }}</td>
     </ng-container>
 
+    <ng-container matColumnDef="acoes">
+      <th mat-header-cell *matHeaderCellDef>Editar/Deletar/Informações</th>
+      <td mat-cell *matCellDef="let funcionario">
+        {{ funcionario.acoes }}
+        <a
+          mat-icon-button
+          color="primary"
+          routerLink="editar/{{ funcionario.id }}"
+          matTooltip="Editar funcioario"
+        >
+          <mat-icon>edit</mat-icon>
+        </a>
+        <a mat-icon-button color="warn" matTooltip="Deletar funcionario" routerLink="deletar/{{ funcionario.id }}" (click)="onClickDelete(funcionario)">
+          <mat-icon>delete</mat-icon>
+        </a>
+        <a mat-icon-button color="basic" matTooltip="Informações do funcionario" routerLink="detalhe/{{ funcionario.id }}" (click)="onClickDetails(funcionario)">
+          <mat-icon>person</mat-icon>
+        </a>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+  <div class="example-button-row ctn-button-add">
+    <a routerLink="criar" class="button-add" mat-fab color="primary" (click)="onClickCreate()">
+      <mat-icon>person_add</mat-icon>
+    </a> 
+  </div>
 </div>
 
 <ng-template #loading>
