--- a/src/app/funcionarios/funcionario-delete/funcionario-delete/funcionario-delete.component.html
+++ b/src/app/funcionarios/funcionario-delete/funcionario-delete/funcionario-delete.component.html
@@ -1,5 +1,5 @@
-<h3>Tem certeza que deseja deletar o funcionario? </h3>
+<h3>Tem certeza que deseja deletar o funcionario(a) <span style="color: red;">{{funcionario.nome}}?</span> </h3>
 <div style="display: flex; justify-content: center;">
-    <button style="margin-right: 10px;" mat-raised-button color="basic">cancelar</button>
-    <button mat-raised-button color="warn">deletar</button>
+    <button style="margin-right: 10px;" mat-raised-button color="basic" (click)="closeDialog()">cancelar</button>
+    <button mat-raised-button color="warn" (click)="delete()">deletar</button>
 </div>
