--- a/src/app/funcionarios/funcionarios.component.html
+++ b/src/app/funcionarios/funcionarios.component.html
@@ -1,93 +1,126 @@
-<div
-  class="mat-elevation-z8 container"
-  *ngIf="funcionarios$ | async as dataSource; else loading"
->
-  <div class="container-title">
-    <h1 class="title">Lista de Funcionários</h1>
-  </div>
+<div *ngIf="funcionarios$ | async as dataSource; else loading">
   <div>
-    <mat-form-field appearance="standard">
-      <mat-label style="margin-left: 10px">Pesquisar</mat-label>
-      <input
-        style="margin-left: 10px"
-        matInput
-        (keyup)="applyFilter($event)"
-        placeholder="Nome"
-        #input
-      />
-    </mat-form-field>
+    <button
+      class="button-home"
+      mat-mini-fab
+      color="primary"
+      aria-label="Example icon button with a menu icon"
+      (click)="onClickHome()"
+    >
+      <mat-icon>arrow_back</mat-icon>
+    </button>
   </div>
-  <table mat-table [dataSource]="dataSources">
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>#ID</th>
-      <td  mat-cell *matCellDef="let funcioario">
-        {{ funcioario.id }}
-      </td>
-    </ng-container>
+  <div class="mat-elevation-z8 container">
+    <div class="container-title">
+      <h1 class="title">Lista de Funcionários</h1>
+    </div>
+    <div>
+      <mat-form-field appearance="standard">
+        <mat-label style="margin-left: 10px">Pesquisar</mat-label>
+        <input
+          style="margin-left: 10px"
+          matInput
+          (keyup)="applyFilter($event)"
+          placeholder="Nome"
+          #input
+        />
+      </mat-form-field>
+    </div>
+    <table mat-table [dataSource]="dataSources">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>#ID</th>
+        <td mat-cell *matCellDef="let funcioario">
+          {{ funcioario.id }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef>Nome</th>
-      <td mat-cell *matCellDef="let funcionario">{{ funcionario.nome }}</td>
-    </ng-container>
+      <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef>Nome</th>
+        <td mat-cell *matCellDef="let funcionario">{{ funcionario.nome }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>E-mail</th>
-      <td mat-cell *matCellDef="let funcionario">{{ funcionario.email }}</td>
-    </ng-container>
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>E-mail</th>
+        <td mat-cell *matCellDef="let funcionario">{{ funcionario.email }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="cpf">
-      <th mat-header-cell *matHeaderCellDef>CPF</th>
-      <td mat-cell *matCellDef="let funcionario">{{ funcionario.cpf }}</td>
-    </ng-container>
+      <ng-container matColumnDef="cpf">
+        <th mat-header-cell *matHeaderCellDef>CPF</th>
+        <td mat-cell *matCellDef="let funcionario">{{ funcionario.cpf }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="telefone">
-      <th mat-header-cell *matHeaderCellDef>Telefone</th>
-      <td mat-cell *matCellDef="let funcionario">{{ funcionario.telefone }}</td>
-    </ng-container>
+      <ng-container matColumnDef="telefone">
+        <th mat-header-cell *matHeaderCellDef>Telefone</th>
+        <td mat-cell *matCellDef="let funcionario">
+          {{ funcionario.telefone }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="dataCriacao">
-      <th mat-header-cell *matHeaderCellDef>Data de Criação</th>
-      <td mat-cell *matCellDef="let funcionario">
-        {{ funcionario.dataCriacao }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="dataCriacao">
+        <th mat-header-cell *matHeaderCellDef>Data de Criação</th>
+        <td mat-cell *matCellDef="let funcionario">
+          {{ funcionario.dataCriacao }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="perfils">
-      <th mat-header-cell *matHeaderCellDef>Perfil</th>
-      <td mat-cell *matCellDef="let funcionario">{{ funcionario.perfils }}</td>
-    </ng-container>
+      <ng-container matColumnDef="perfils">
+        <th mat-header-cell *matHeaderCellDef>Perfil</th>
+        <td mat-cell *matCellDef="let funcionario">
+          {{ funcionario.perfils }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="acoes">
-      <th mat-header-cell *matHeaderCellDef>Editar/Deletar/Informações</th>
-      <td mat-cell *matCellDef="let funcionario">
-        {{ funcionario.acoes }}
-        <a
-          mat-icon-button
-          color="primary"
-          routerLink="editar/{{ funcionario.id }}"
-          matTooltip="Editar funcioario"
-        >
-          <mat-icon>edit</mat-icon>
-        </a>
-        <a mat-icon-button color="warn" matTooltip="Deletar funcionario" routerLink="deletar/{{ funcionario.id }}" (click)="onClickDelete(funcionario)">
-          <mat-icon>delete</mat-icon>
-        </a>
-        <a mat-icon-button color="basic" matTooltip="Informações do funcionario" routerLink="detalhe/{{ funcionario.id }}" (click)="onClickDetails(funcionario)">
-          <mat-icon>person</mat-icon>
-        </a>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="acoes">
+        <th mat-header-cell *matHeaderCellDef>Editar/Deletar/Informações</th>
+        <td mat-cell *matCellDef="let funcionario">
+          {{ funcionario.acoes }}
+          <a
+            mat-icon-button
+            color="primary"
+            routerLink="/editar-funcionario/{{ funcionario.id }}"
+            matTooltip="Editar funcioario"
+          >
+            <mat-icon>edit</mat-icon>
+          </a>
+          <a
+            mat-icon-button
+            color="warn"
+            matTooltip="Deletar funcionario"
+            routerLink="deletar/{{ funcionario.id }}"
+            (click)="onClickDelete(funcionario)"
+          >
+            <mat-icon>delete</mat-icon>
+          </a>
+          <a
+            mat-icon-button
+            color="basic"
+            matTooltip="Informações do funcionario"
+            routerLink="detalhe/{{ funcionario.id }}"
+            (click)="onClickDetails(funcionario)"
+          >
+            <mat-icon>person</mat-icon>
+          </a>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <div class="example-button-row ctn-button-add">
-    <a routerLink="criar" class="button-add" mat-fab color="primary" (click)="onClickCreate()">
-      <mat-icon>person_add</mat-icon>
-    </a> 
+      
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <div class="example-button-row ctn-button-add">
+      <a
+        routerLink="criar"
+        class="button-add"
+        mat-fab
+        color="primary"
+        (click)="onClickCreate()"
+      >
+        <mat-icon>person_add</mat-icon>
+      </a>
+    </div>
   </div>
 </div>
-
 <ng-template #loading>
-  <mat-spinner></mat-spinner>
+  <app-loader></app-loader>
 </ng-template>
