--- a/src/app/funcionarios/funcionarios.component.html
+++ b/src/app/funcionarios/funcionarios.component.html
@@ -6,6 +6,7 @@
       color="primary"
       aria-label="Example icon button with a menu icon"
       (click)="onClickHome()"
+      matTooltip="Voltar para Home"
     >
       <mat-icon>arrow_back</mat-icon>
     </button>
@@ -103,7 +104,7 @@
         </td>
       </ng-container>
 
-      
+
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
