lista de lucros

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -32,6 +32,14 @@
     >
       <mat-icon class="icon-sidebar">attach_money</mat-icon>Valor do Dia
     </button>
+    <button
+    mat-button
+    style="align-items: center; display: flex"
+    routerLink="lista-de-lucros"
+    >
+      <mat-icon class="icon-sidebar"
+      >receipt_long</mat-icon>Lista de Lucros
+    </button>
     <button mat-button style="align-items: center; display: flex">
       <mat-icon class="icon-sidebar">leaderboard</mat-icon>Estatísticas
     </button>
