Feito pesquisa de media/soma de lucro

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -40,7 +40,7 @@
       <mat-icon class="icon-sidebar"
       >receipt_long</mat-icon>Lista de Lucros
     </button>
-    <button mat-button style="align-items: center; display: flex">
+    <button mat-button style="align-items: center; display: flex" routerLink="estatisticas">
       <mat-icon class="icon-sidebar">leaderboard</mat-icon>Estatísticas
     </button>
     <button
