Feito lista de pedidos e dialog para adionar

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -22,7 +22,11 @@
 
 <mat-drawer-container class="example-container" autosize>
   <mat-drawer #drawer class="example-sidenav" mode="side">
-    <button mat-button style="align-items: center; display: flex">
+    <button
+    mat-button
+    style="align-items: center; display: flex"
+    routerLink="/fazer-pedido"
+    >
       <mat-icon class="icon-sidebar">request_quote</mat-icon> Fazer Pedido
     </button>
     <button
