--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -16,7 +16,7 @@
     class="example-icon d-flex"
     aria-label="Example icon-button with share icon"
   >
-    <mat-icon>logout</mat-icon>
+    <mat-icon  (click)="logout()" >logout</mat-icon>
   </button>
 </mat-toolbar>
 
