--- a/src/app/statistics/statistics/statistics.component.html
+++ b/src/app/statistics/statistics/statistics.component.html
@@ -1,7 +1,17 @@
+<button
+class="button-home"
+mat-mini-fab
+color="primary"
+aria-label="Example icon button with a menu icon"
+(click)="onClickHome()"
+matTooltip="Voltar para Home"
+>
+<mat-icon>arrow_back</mat-icon>
+</button>
 <body>
   <header class="ctn-header">
     <div>
-      <h4 style="color: #27EF8F">R$: {{ resultVendasUltimosSeteDias$ }}</h4>
+      <h4 style="color: #00532b">R$: {{ resultVendasUltimosSeteDias$ }}</h4>
       <p style="color: #ABABAB">vendas nos últimos 7 dias</p>
     </div>
     <div>
@@ -16,7 +26,9 @@
 
   <section class="ctn-section">
     <div class="ctn-graphic">
-      <p>grafico</p>
+      <app-dashboard
+      [dados]="chart()"
+      ></app-dashboard>
     </div>
     <div class="ctn-form">
       <form [formGroup]="mediaForm" (ngSubmit)="onSubmitMediaMes()">
