Estilização no componente Request

--- a/src/app/request/request-dialog/request-dialog/request-dialog.component.html
+++ b/src/app/request/request-dialog/request-dialog/request-dialog.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title class="text">Adicionar Produto</h1>
-<form [formGroup]="requestForm" class="form" >
+<form [formGroup]="requestForm" class="form">
   <mat-form-field appearance="outline">
     <mat-label>Nome do Produto</mat-label>
-    <input matInput formControlName="produto">
+    <input matInput formControlName="produto" />
     <mat-error *ngIf="requestForm.get('produto')?.errors?.['required']">
       Campo Obrigatório
     </mat-error>
@@ -10,7 +10,7 @@
 
   <mat-form-field appearance="outline">
     <mat-label>Quantidade</mat-label>
-    <input matInput formControlName="quantidade" type="number"   >
+    <input matInput formControlName="quantidade" type="number" />
     <mat-error *ngIf="requestForm.get('quantidade')?.errors?.['required']">
       Campo Obrigatório
     </mat-error>
@@ -20,8 +20,9 @@
     <mat-label>Unidade de Medida</mat-label>
     <mat-select formControlName="unidadeMedida">
       <mat-option value="caixa">Caixa</mat-option>
-      <mat-option value="unidade">Unidade</mat-option>
       <mat-option value="kilo">Kilo</mat-option>
+      <mat-option value="saco">Saco</mat-option>
+      <mat-option value="unidade">Unidade</mat-option>
     </mat-select>
     <mat-error *ngIf="requestForm.get('unidadeMedida')?.errors?.['required']">
       Campo Obrigatório
@@ -39,10 +40,15 @@
       Campo Obrigatório
     </mat-error>
   </mat-form-field>
-
 </form>
-<div mat-dialog-actions>
+<div mat-dialog-actions class="ctn-button">
   <button mat-button mat-dialog-close>Fechar</button>
-  <button mat-button color="primary" (click)="pegarValor()" [disabled]="requestForm.invalid">Adicionar</button>
+  <button
+    mat-button
+    color="primary"
+    (click)="pegarValor()"
+    [disabled]="requestForm.invalid"
+  >
+    Adicionar
+  </button>
 </div>
-
