Reponsividade do componente Statistics

--- a/src/app/request/request/request.component.html
+++ b/src/app/request/request/request.component.html
@@ -16,11 +16,10 @@
     <h1 class="title">Lista de Pedidos</h1>
     <div class="ctn-buttonAdd">
       <button
-        class="buttonAdd"
+        color="primary"
         mat-fab
         (click)="openDialog()"
         matTooltip="Adicionar Produto"
-        color="#01010"
       >
         <mat-icon>add_shopping_cart</mat-icon>
       </button>
