--- a/src/app/statistics/statistics/statistics.component.html
+++ b/src/app/statistics/statistics/statistics.component.html
@@ -12,22 +12,22 @@ matTooltip="Voltar para Home"
   <h1 class="title">Estatísticas</h1>
   <header class="ctn-header">
     <div>
-      <h4 style="color: #00532b; display: flex;">R$: {{ resultVendasUltimosSeteDias$ }}
-        <mat-icon>trending_up</mat-icon>
+      <h4 class="header-values" style="color: #00532b;">R$: {{ resultVendasUltimosSeteDias$ }}
+
       </h4>
-      <p style="color: #ABABAB">vendas nos últimos 7 dias</p>
+      <p style="color: #ABABAB; padding: 3px; text-align: center;">vendas nos últimos 7 dias</p>
     </div>
     <div>
-      <h4 style="color: #A630C3; display: flex;">R$: {{ resultVendasUltimosTrintaDias$ }}
-        <mat-icon>trending_up</mat-icon>
+      <h4 class="header-values" style="color: #A630C3;">R$: {{ resultVendasUltimosTrintaDias$ }}
+
       </h4>
-      <p style="color: #ABABAB">vendas nos últimos 30 dias</p>
+      <p style="color: #ABABAB; padding: 3px; text-align: center;">vendas nos últimos 30 dias</p>
     </div>
     <div>
-      <h4 style="color: #27A7EF; display: flex;">R$: {{ resultMediaDiariaMesAnterior$ }}
-        <mat-icon>trending_up</mat-icon>
+      <h4 class="header-values" style="color: #27A7EF;">R$: {{ resultMediaDiariaMesAnterior$ }}
+
       </h4>
-      <p style="color: #ABABAB">média de vendas diárias no último mês</p>
+      <p style="color: #ABABAB; padding: 3px; text-align: center;">média de vendas diárias no último mês</p>
     </div>
   </header>
 
