--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -8,7 +8,7 @@
   >
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Varejão da Economia</span>
+  <span>Hortifruti</span>
   <span class="example-spacer"></span>
   <button
     mat-icon-button
@@ -55,4 +55,11 @@
       <mat-icon class="icon-sidebar">group_add</mat-icon>Cadastrar Funcionario
     </button>
   </mat-drawer>
+  <section>
+    <mat-grid-list cols="1" rowHeight="3:1.4">
+      <mat-grid-tile><img class="img" src="assets/img/fotoHome.png" alt="foto hortifruti"></mat-grid-tile>
+    </mat-grid-list>
+  </section>
 </mat-drawer-container>
+
+
