--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -2,14 +2,14 @@
     width: 100vw;
     height: 100vh;
   }
-  
+
   .example-sidenav-content {
     display: flex;
     height: 100%;
     align-items: center;
     justify-content: center;
   }
-  
+
   .example-sidenav {
     padding: 20px;
   }
@@ -21,3 +21,30 @@
 .icon-sidebar {
   margin-right: 3px;
 }
+
+
+.container-imagens {
+  display: flex;
+  width: 100%;
+  height: 40vh;
+  margin-left: 4vw;
+  margin-right: 5vw;
+}
+
+.img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.ct1 {
+  width: 45vw;
+  padding: 5px;
+}
+
+mat-grid-tile {
+  background: lightblue;
+  box-shadow: 15px 15px 10px gray;
+}
+
+
