--- a/src/app/funcionarios/funcionario-create/funcionario-create/funcionario-create.component.scss
+++ b/src/app/funcionarios/funcionario-create/funcionario-create/funcionario-create.component.scss
@@ -6,12 +6,14 @@
 .container {
     display: flex;
     justify-content: center;
-    margin-top: -70px;
+    margin-top: 1vh;
 }
 
 .container-form {
     width: 400px;
-    padding: 5px;
+    background-color: #fff;
+    padding: 1vw;
+    margin-top: 2vh;
 }
 
 .field {
