--- a/src/app/profit-list/profit-list.component.html
+++ b/src/app/profit-list/profit-list.component.html
@@ -1,23 +1,23 @@
-<div >
-  <div>
-    <button
-      class="button-home"
-      mat-mini-fab
-      color="primary"
-      aria-label="Example icon button with a menu icon"
-      (click)="onClickHome()"
-      matTooltip="Voltar para Home"
-    >
-    <mat-icon>arrow_back</mat-icon>
-  </button>
-  </div>
+<div>
+  <button
+    class="button-home"
+    mat-mini-fab
+    color="primary"
+    aria-label="Example icon button with a menu icon"
+    (click)="onClickHome()"
+    matTooltip="Voltar para Home"
+  >
+  <mat-icon>arrow_back</mat-icon>
+</button>
+</div>
+<body>
   <div class="mat-elevation-z8 container">
     <div class="container-title">
       <h1 class="title">Lista de Lucros</h1>
     </div>
     <div>
       <mat-form-field appearance="standard">
-        <mat-label style="margin-left: 10px">Pesquisar</mat-label>
+        <mat-label style="margin-left: 10px;">Pesquisar</mat-label>
         <input
           style="margin-left: 10px"
           matInput
@@ -35,7 +35,7 @@
       >
       <ng-container matColumnDef="lucroDia">
         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number" >Valor do lucro</th>
-        <td mat-cell *matCellDef="let profit">R$: {{ profit.lucroDia }}</td>
+        <td mat-cell *matCellDef="let profit" >R$: {{  profit.lucroDia }}</td>
         </ng-container
       >
 
@@ -43,8 +43,8 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
-  <mat-paginator [length]="100" pageSize="10" [pageSizeOptions]="[3,5,10]" ></mat-paginator>
-</div>
+  <mat-paginator class="paginator" [length]="100" pageSize="10" [pageSizeOptions]="[3,5,10]" ></mat-paginator>
+</body>
 
 <ng-template #loading>
   <app-loader></app-loader>
