--- a/src/app/request/request/request.component.scss
+++ b/src/app/request/request/request.component.scss
@@ -48,6 +48,15 @@ body {
   margin-top: 2vh;
 }
 
+tbody  {
+  height: 60px;
+  background-color: #fff;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media screen and (max-width: 1072px) {
   .container {
     margin-left: 1vw;
